# langgraph-workflow

./: .env.example  .gitignore  README.md  pyproject.toml
agent-movie-manager/: agent.ipynb
agent-movie-manager/studio/: agent.py  configuration.py  langgraph.json
common/db/: __init__.py  db.py
common/models/: movie.py
common/repositories/: movie_repository.py
migrations/: README  env.py
migrations/versions/: 079d30356a4a_create_movies.py
seeds/: movie_seed.py  run.py
test/: sql_connection_test.py
